src/libadalang/src/libadalang.h

/*
 * Data type for all nodes. Nodes are assembled to make up a tree.  See the
 * node primitives below to inspect such trees.
 *
 * Unlike for contexts and units, this type has weak-reference semantics:
 * keeping a reference to a node has no effect on the decision to keep the unit
 * that it owns allocated. This means that once all references to the context
 * and units related to a node are dropped, the context and its units are
 * deallocated and the node becomes a stale reference: most operations on it
 * will raise a ``Stale_Reference_Error``.
 *
 * Note that since reparsing an analysis unit deallocates all the nodes it
 * contains, this operation makes all reference to these nodes stale as well.
 */
typedef void* ada_base_node;
/*
 * Reference to a symbol. Symbols are owned by analysis contexts, so they must
 * not outlive them. This type exists only in the C API, and roughly wraps the
 * corresponding Ada type (an array fat pointer).
 */
typedef struct {
   void *data;
   void *bounds;
} ada_symbol_type;
/*
 * Type to contain Unicode text data.
 */
typedef struct {
   int length;
   int ref_count;
   uint32_t content[1];
} *ada_string_type;
typedef uint8_t ada_bool;
        

typedef struct ada_doc_annotation_array_record *ada_doc_annotation_array;
        

typedef struct ada_ada_node_array_record *ada_ada_node_array;
        



typedef struct {
        ada_internal_metadata md;
        ada_env_rebindings_type rebindings;
        ada_bool from_rebound;
} ada_internal_entity_info;
        



typedef struct {
        ada_base_node node;
        ada_internal_entity_info info;
} ada_base_entity;
        



typedef struct {
        ada_bool exists;
        ada_base_entity node;
        ada_base_entity value;
} ada_internal_aspect;
        



/*

 */
struct ada_doc_annotation_array_record {
   int n;
   int ref_count;
   ada_internal_doc_annotation items[1];
};
        



/*

 */
struct ada_ada_node_array_record {
   int n;
   int ref_count;
   ada_base_entity items[1];
};
        



/*
 * This field can contain one of the following nodes: ``ada_allocator``,
 * ``ada_attribute_ref``, ``ada_base_aggregate``, ``ada_bin_op``,
 * ``ada_call_expr``, ``ada_char_literal``, ``ada_concat_op``,
 * ``ada_cond_expr``, ``ada_decl_expr``, ``ada_dotted_name``,
 * ``ada_explicit_deref``, ``ada_identifier``, ``ada_membership_expr``,
 * ``ada_null_literal``, ``ada_num_literal``, ``ada_paren_expr``,
 * ``ada_qual_expr``, ``ada_quantified_expr``, ``ada_raise_expr``,
 * ``ada_reduce_attribute_ref``, ``ada_string_literal``, ``ada_target_name``,
 * ``ada_un_op``, ``ada_update_attribute_ref``
 */
extern int ada_iterated_assoc_f_r_expr(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * This field can contain one of the following nodes: ``ada_identifier``,
 * ``ada_others_designator``, ``ada_string_literal``
 */
extern int ada_param_assoc_f_designator(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * This field can contain one of the following nodes: ``ada_allocator``,
 * ``ada_attribute_ref``, ``ada_base_aggregate``, ``ada_bin_op``,
 * ``ada_box_expr``, ``ada_call_expr``, ``ada_char_literal``,
 * ``ada_concat_op``, ``ada_cond_expr``, ``ada_decl_expr``,
 * ``ada_dotted_name``, ``ada_explicit_deref``, ``ada_identifier``,
 * ``ada_membership_expr``, ``ada_null_literal``, ``ada_num_literal``,
 * ``ada_paren_expr``, ``ada_qual_expr``, ``ada_quantified_expr``,
 * ``ada_raise_expr``, ``ada_reduce_attribute_ref``, ``ada_string_literal``,
 * ``ada_target_name``, ``ada_un_op``, ``ada_update_attribute_ref``
 */
extern int ada_param_assoc_f_r_expr(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * Whether this decl is the nested decl of a generic formal declaration.
 */
extern int ada_basic_decl_p_is_formal(
    ada_base_entity *node,


    ada_bool *value_p
);
        



/*
 * Return the documentation annotations associated with this decl. Annotations
 * are any comment line of the form:
 *
 * .. code::
 *
 *    --% [annotation_name]: [annotation]
 *
 * Raises a property error if the doc is incorrectly formatted.
 *
 * .. attention:: This is an experimental feature, so even if it is exposed to
 *    allow experiments, it is totally unsupported and the API and behavior are
 *    very likely to change in the future.
 */
extern int ada_basic_decl_p_doc_annotations(
    ada_base_entity *node,


    ada_doc_annotation_array *value_p
);
        



/*
 * Return the documentation associated with this decl. Raises a property error
 * if the doc is incorrectly formatted.
 *
 * .. attention:: This is an experimental feature, so even if it is exposed to
 *    allow experiments, it is totally unsupported and the API and behavior are
 *    very likely to change in the future.
 */
extern int ada_basic_decl_p_doc(
    ada_base_entity *node,


    ada_string_type *value_p
);
        



/*
 * Return the previous part for this decl, if applicable.
 *
 * .. note:: It is not named previous_part, because BaseTypeDecl has a more
 *    precise version of previous_part that returns a BaseTypeDecl. Probably,
 *    we want to rename the specific versions, and have the root property be
 *    named previous_part. (TODO R925-008)
 */
extern int ada_basic_decl_p_previous_part_for_decl(
    ada_base_entity *node,

        
        ada_bool
        imprecise_fallback,

    ada_base_entity *value_p
);
        



/*
 * Return the canonical part for this decl. In the case of decls composed of
 * several parts, the canonical part will be the first part.
 */
extern int ada_basic_decl_p_canonical_part(
    ada_base_entity *node,

        
        ada_bool
        imprecise_fallback,

    ada_base_entity *value_p
);
        



/*
 * Return all parts that define this entity, sorted from first part to last
 * part.
 */
extern int ada_basic_decl_p_all_parts(
    ada_base_entity *node,

        
        ada_bool
        imprecise_fallback,

    ada_ada_node_array *value_p
);
        



/*
 * Return whether this declaration is static.
 */
extern int ada_basic_decl_p_is_static_decl(
    ada_base_entity *node,

        
        ada_bool
        imprecise_fallback,

    ada_bool *value_p
);
        



/*
 * Return the list of aspects that are attached to this node.
 */
extern int ada_basic_decl_f_aspects(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * Return the aspect with name ``name`` for this entity.
 */
extern int ada_basic_decl_p_get_aspect_assoc(
    ada_base_entity *node,

        
        const ada_symbol_type*
        name,

    ada_base_entity *value_p
);
        



/*
 * Return the expression associated to the aspect with name ``name`` for this
 * entity.
 */
extern int ada_basic_decl_p_get_aspect_spec_expr(
    ada_base_entity *node,

        
        const ada_symbol_type*
        name,

    ada_base_entity *value_p
);
        



/*
 * Return the aspect with name ``name`` associated to this entity.
 *
 * Aspects are properties of entities that can be specified by the Ada program,
 * either via aspect specifications, pragmas, or attributes.
 *
 * This will return the syntactic node corresponding to attribute directly.
 *
 * Note: for some aspects (e.g. Inline), Libadalang will check if they are
 * defined on any part of the entity.
 */
extern int ada_basic_decl_p_get_aspect(
    ada_base_entity *node,

        
        const ada_symbol_type*
        name,
        
        ada_bool
        imprecise_fallback,

    ada_internal_aspect *value_p
);
        



/*
 * Returns whether the boolean aspect named ``name`` is set on the entity
 * represented by this node.
 *
 * "Aspect" is used as in RM terminology (see :rmlink:`13`).
 */
extern int ada_basic_decl_p_has_aspect(
    ada_base_entity *node,

        
        const ada_symbol_type*
        name,
        
        ada_bool
        imprecise_fallback,

    ada_bool *value_p
);
        



/*
 * Return the pragma with name ``name`` associated to this entity.
 *
 * Please use the ``p_get_aspects`` property instead if you are interested in
 * aspects, i.e. information that can be represented by either aspect
 * specification nodes, pragma nodes or attribute definition nodes.
 */
extern int ada_basic_decl_p_get_pragma(
    ada_base_entity *node,

        
        const ada_symbol_type*
        name,

    ada_base_entity *value_p
);
        



/*
 * Return the representation clause associated to this type decl that defines
 * the given attribute name.
 */
extern int ada_basic_decl_p_get_representation_clause(
    ada_base_entity *node,

        
        const ada_symbol_type*
        name,
        
        ada_bool
        imprecise_fallback,

    ada_base_entity *value_p
);
        



/*
 * Return the at clause associated to this declaration.
 */
extern int ada_basic_decl_p_get_at_clause(
    ada_base_entity *node,

        
        ada_bool
        imprecise_fallback,

    ada_base_entity *value_p
);
        



/*
 * Whether this declaration is imported from another language.
 */
extern int ada_basic_decl_p_is_imported(
    ada_base_entity *node,


    ada_bool *value_p
);
        



/*
 * Return whether this declaration is ghost code or not. See SPARK RM 6.9.
 */
extern int ada_basic_decl_p_is_ghost_code(
    ada_base_entity *node,


    ada_bool *value_p
);
        



/*
 * Whether a BasicDecl is the root decl for its unit.
 */
extern int ada_basic_decl_p_is_compilation_unit_root(
    ada_base_entity *node,


    ada_bool *value_p
);
        



/*
 * Return whether this declaration is visible from the point of view of the
 * given ``origin`` node.
 *
 * .. attention:: Only package-level (public or private) declarations are
 *    supported for now.
 */
extern int ada_basic_decl_p_is_visible(
    ada_base_entity *node,

        
        const ada_base_entity*
        from_node,

    ada_bool *value_p
);